--- a/msgestionrest-dev.properties
+++ b/msgestionrest-dev.properties
@@ -1,8 +1,12 @@
 cliente.property= msgestionrest_entorno_Desarrollo
 
 
+#pruebas
 logging.level.org.hibernate.sql=debug
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-#test
+#testdsddsds
+#sdsdsd
+
+#sdsd
