--- a/msclienterest-dev.properties
+++ b/msclienterest-dev.properties
@@ -1,4 +1,7 @@
-cliente.property= msclienterest_entorno_DEsarroll
+
+cliente.property= msclienterest_entorno_DEsarrollo
+spring.data.mongodb.uri=mongodb://localhost:27017/clientesDB
+#spring.datasource.url=jdbc:
 
 #testettetete
 #testettetete23232
