--- a/msgestionrest-dev.properties
+++ b/msgestionrest-dev.properties
@@ -1,10 +1,12 @@
-cliente.property= msgestionrest_entorno_Desarrollo
+cliente.property= msgestionrest_entorno_Desarrollo postgresql
 
-
+spring.datasource.url=jdbc:postgresql://localhost:5433/gestionDb
+spring.datasource.dbcp2.driver-class-name=org.postgresql.Driver
+app.testPropiedad= Propiedad para Test modificado IIMS
 #pruebas
-logging.level.org.hibernate.sql=debug
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+#logging.level.org.hibernate.sql=debug
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
 
 #testdsddsds
 #sdsdsd
