--- a/msclienterest-dev.properties
+++ b/msclienterest-dev.properties
@@ -1,5 +1,5 @@
 
-cliente.property= msclienterest_entorno_DEsarrollo
+cliente.property= msclienterest_entorno_DEsarrollo mongodb
 spring.data.mongodb.uri=mongodb://localhost:27017/clientesDB
 #spring.datasource.url=jdbc:
 
