--- a/msgestionrest-dev.properties
+++ b/msgestionrest-dev.properties
@@ -1,7 +1,7 @@
-cliente.property= msgestionrest_entorno_Desarrollo postgresql
-
+cliente.property= Entorno_Desarrollo 
 spring.datasource.url=jdbc:postgresql://localhost:5433/gestionDb
 spring.datasource.dbcp2.driver-class-name=org.postgresql.Driver
+
 app.testPropiedad= Propiedad para Test modificado IIMS
 #pruebas
 #logging.level.org.hibernate.sql=debug
