spring.jpa.show-sql=true spring.jpa.hibernate.ddl-auto=update spring.datasource.dbcp2.driver-class-name=org.postgresql.Driver

--- a/msgestionrest-dev.properties
+++ b/msgestionrest-dev.properties
@@ -1,5 +1,8 @@
-cliente.property= Entorno_Desarrollo 
+cliente.property= msgestionrest Entorno_Desarrollo 
 spring.datasource.url=jdbc:postgresql://localhost:5433/gestionDb
+logging.level.org.hibernate.sql=debug
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.dbcp2.driver-class-name=org.postgresql.Driver
 
 app.testPropiedad= Propiedad para Test modificado IIMS
