--- a/msinscripcionesequiposrest-dev.properties
+++ b/msinscripcionesequiposrest-dev.properties
@@ -1,3 +1,2 @@
 cliente.property= msclienterest entorno DEsarrollo mongodb
-spring.data.mongodb.uri=mongodb://localhost:27017/clientesDB
-#spring.datasource.url=jdbc:
+spring.data.mongodb.uri=mongodb://localhost:27017/InscripcionesDB
