--- a/msinscripcionrest-dev.properties
+++ b/msinscripcionrest-dev.properties
@@ -1,2 +1,2 @@
-cliente.property= msclienterest entorno DEsarrollo mongodb
-spring.data.mongodb.uri=mongodb://localhost:27017/InscripcionesDB
+cliente.property= msinscripcionrest entorno DEsarrollo mongodb
+spring.data.mongodb.uri=mongodb://localhost:27017/inscripcionesDB
