app.testPropiedad= Propiedad para Test

--- a/msinscripcionrest-dev.properties
+++ b/msinscripcionrest-dev.properties
@@ -1,2 +1,3 @@
 cliente.property= msinscripcionrest entorno DEsarrollo mongodb
 spring.data.mongodb.uri=mongodb://localhost:27017/inscripcionesDB
+app.testPropiedad= Propiedad para Test
