--- a/msclienterest-dev.properties
+++ b/msclienterest-dev.properties
@@ -1,4 +1,4 @@
 cliente.property= msclienterest entorno DEsarrollo mongodb
-spring.data.mongodb.uri=mongodb://localhost:27017/clientesDB
+spring.data.mongodb.uri=mongodb://localhost:27017/ClientesTipoDB
 #spring.datasource.url=jdbc:
 app.testPropiedad= Propiedad para Test
